css/style.css
html {
  scroll-behavior: smooth;
}
body {
  margin: 0;
  padding: 0;
  font-family: 'Raleway', sans-serif;
  color: #3B3F44;
  letter-spacing: 1px;
}

/* DESKTOP LAYOUT */

/* Header */
header {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1;
}
#header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  background-color: #74D1BA;
  padding: 16px 10%;
  align-items: center;
}
#header-img {
  width: 100%;
  max-width: 350px;
}

/* Navigation Bar */
#nav-bar ul {
  display: flex;
  flex-flow: row wrap;
  list-style-type: none;
}
.nav-link {
  margin-left: 10px;
  padding: 10px 5px;
  font-weight: 600;
  color: #fff;
  text-decoration: none;
  border-top: 2px solid #74D1BA;
  border-bottom: 2px solid #74D1BA;
  transition: .3s;
}
.nav-link:hover {
  padding: 7px 5px;
  border-top: 2px solid #FFF;
  border-bottom: 2px solid #FFF;
  transition: .3s;
}

/* Header Bottom Image */
.header-wave {
  width: 100%;
  height: auto;
}

/* Main Content */
.container {
  margin: 180px auto 0 auto;
  max-width: 1520px;
}
.intro {
  display: flex;
  flex-direction: column;
}
.main-title {
  text-align: center;
  font-family: 'Poiret One', cursive;
  font-size: 3em;
  font-style: italic;
  letter-spacing: 2px;
}
.join-btn {
  margin: 10px auto;
  padding: 15px 5px;
  width: 185px;
  text-align: center;
  text-decoration: none;
  font-size: 1.5em;
  font-weight: 600;
  letter-spacing: 3px;
  color: #FFF;
  background-color: #74D1BA;
  border: 2px solid #3B3F44;
  transition: .3s;
}
.join-btn:hover {
  background-color: #3B3F44;
  transition: .3s;
}

/* About */
#about {
  text-align: center;
  padding-top: 65px;
}
.heading {
  margin: 50px auto 30px auto;
  padding: 10px 0;
  width: 200px;
  text-align: center;
  font-size: 2.25em;
  font-weight: 100;
  border-top: 2px solid #74D1BA;
}
.about-text {
  max-width: 1024px;
  font-size: 1.3em;
  line-height: 1.7em;
  margin: 0 auto;
}
.highlight {
  padding: 5px 0;
  font-weight: 600;
  color: #74D1BA;
  text-decoration: none;
  border-top: 2px solid #FFF;
  border-bottom: 2px solid #FFF;
  transition: .3s;
}
.highlight:hover {
  padding: 2px 0;
  border-top: 2px solid #74D1BA;
  border-bottom: 2px solid #74D1BA;
  transition: .3s;
}

/* Icons */
.icons {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
}
.icon-div {
  margin: 50px 30px;
  width: 280px;
}
.icon-heading {
  margin-bottom: 5px;
  font-weight: 600;
  font-size: 1.5em;
  color: #74D1BA;
  letter-spacing: 1px;
}
.icon-text {
  font-size: 1em;
}

/* Video */
#video {
  padding: 3px;
  width: 100%;
  height: 100%;
  max-width: 560px;
  min-height: 315px;
  border: 2px solid #74D1BA;
}

/* Pricing */
#pricing {
  padding-top: 65px;
}
.pricing-div{
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}
.pricing-plan{
  display: flex;
  flex-direction: column;
  margin: 10px 30px;
  padding: 0;
  width: 300px;
  text-align: center;
  list-style: none;
  transition: .3s;
}
.pricing-plan li:not(.get):not(.pricing-title) {
  padding: 20px 0;
  border-left: 2px solid #3B3F44;
  border-right: 2px solid #3B3F44;
  border-bottom: 2px solid #3B3F44;
}
.pricing-title {
  padding: 20px 0;
  font-size: 1.5em;
  font-weight: 600;
  color: #FFF;
  background-color: #74D1BA;
}
.price {
  padding: 20px 0;
  font-size: 1.5em;
  color: #FFF;
  background-color: #3B3F44;
}
.get {
  padding: 20px;
  background-color: #74D1BA;
  transition: .3s;
  border: 2px solid #3B3F44;
  border-top: none;
  cursor: pointer;
}
.get:hover {
  background-color: #3B3F44;
  transition: .3s;
}
.get-btn {
  font-size: 1.5em;
  font-weight: 600;
  color: #FFF;
  text-decoration: none;
}

/* Contact */
#contact {
  padding-top: 50px;
}
.contact-text {
  text-align: center;
  font-size: 1.3em;
  line-height: 1.7em;
}
#form {
  text-align: center;
}
#email {
  padding: 10px;
  width: 280px;
  letter-spacing: 1px;
  border: 2px solid #3B3F44;
  transition: .3s;
}
#email:focus {
  border: 2px solid #74D1BA;
  transition: .3s;
}
#submit {
  margin: 10px;
  padding: 10px;
  width: 150px;
  font-weight: 600;
  color: #FFF;
  letter-spacing: 2px;
  border: 2px solid #3B3F44;
  background-color: #74D1BA;
  transition: .3s;
}
#submit:hover {
  background-color: #3B3F44;
  cursor: pointer;
  transition: .3s;
}

/* Footer */
footer {
  margin-top: 50px;
  height: 50px;
  text-align: center;
  color: #FFF;
  background-color: #3B3F44;
}
.footer-text {
  padding-top: 15px;
}

/* TABLET LAYOUT */

@media only screen and (max-width: 1200px) {
  /* Header */
  #header {
    display: flex;
    justify-content: center;
    flex-direction: column;
  }

  /* Navigation Bar */
  #nav-bar ul {
    padding-left: 0;
    min-width: 290px;
  }

  /* Main Content */
  .container {
    margin-top: 200px;
  }
  .main-title {
    font-size: 2.5em;
    line-height: 1.3;
  }

  /* About */
  .heading {
    font-size: 1.7em;
    margin-bottom: 5px;
  }
  .about-text {
    font-size: 1.1em;
    margin-bottom: 40px;
    padding: 0 20px;
  }

  /* Icons */
  .icon-div {
    margin: 10px;
  }

  /* Video */
  #video {
    margin-top: 30px;
  }

  /* Pricing */
  .pricing-div {
    margin-top: 10px;
  }
  .pricing-plan {
    margin-bottom: 30px;
  }

  /* Contact */
  .contact-text {
    margin-top: 0;
  }
}

/* MOBILE LAYOUT */
@media only screen and (max-width: 715px) {
  /* Main Content */
  .main-title {
    font-size: 2em;
  }

  /* About */
  .heading {
    font-size: 1.5em;
  }
  .about-text {
    font-size: 1em;
    margin-bottom: 40px;
  }

  /* Contact */
  .contact-text {
    padding: 0 20px;
    font-size: 1.2em;
  }
  #email {
    width: 50%;
  }
}

